Breakout Changelog
==================

2.0.7 - XX/XX/XXXX
------------------

--------------------------------------------------------------

2.0.6.1 - 08/08/2015
------------------

* Fixed: Some of the new FontAwesome files were dropped from the last update.

--------------------------------------------------------------

2.0.6 - 08/07/2015
------------------

* Updated to FontAwesome 4.4.0.
* Fixed: Minor PHP warnings around retrieving posts by category from shortcodes.
* Fixed: Minor admin compatibility issue with WPML 3.2 update.

--------------------------------------------------------------

2.0.5 - 04/24/2015
------------------

* Removed logo options from customizer; use *Appearance > Theme Options* instead.
* Fixed: Theme-generated styles from theme options not getting applied in WordPress 4.2+

--------------------------------------------------------------

2.0.4 - 04/21/2015
------------------

* Updated to Bootstrap 3.3.4.
* Updated to FontAwesome 4.3.0.
* Fixed: Security vulnerabilities from `add_query_arg()` (see [here](https://make.wordpress.org/plugins/2015/04/20/fixing-add_query_arg-and-remove_query_arg-usage/))

--------------------------------------------------------------

2.0.3 - 01/25/2015
------------------

* Fixed duplicate closing `</a>` bug with dropdowns menus of main navigation.
* Minor security fix.

--------------------------------------------------------------

2.0.2 - 11/25/2014
------------------

* Important security fix.
* Updated user documentation included in theme package, including new videos for Layout Builder plugin v2 update.

--------------------------------------------------------------

2.0.1 - 05/15/2014
------------------

* Fixed main menu's home button bug on tablet view.

--------------------------------------------------------------

2.0.0 - 05/12/2014
------------------
