@@ -125,6 +125,14 @@
 #optionsframework .widefat td ul {
 	margin-top: 0;
 }
+#optionsframework .widefat .check-column {
+	padding: 10px 0 0 0;
+}
+#optionsframework .widefat tbody th.check-column,
+#optionsframework .widefat tfoot td.check-column,
+#optionsframework .widefat thead td.check-column {
+	padding-left: 0;
+}
 @media 	only screen and (-webkit-min-device-pixel-ratio: 1.5),
 		only screen and (-moz-min-device-pixel-ratio: 1.5),
 		only screen and (-o-min-device-pixel-ratio: 1.5),
