@@ -4,6 +4,8 @@ Breakout Changelog
 2.0.7 - XX/XX/XXXX
 ------------------
 
+* Fixed: Minor admin styling issues with WordPress 4.3.
+
 --------------------------------------------------------------
 
 2.0.6.1 - 08/08/2015
